// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "1.5c06566be3823ab641ec.css": "294e247516d839373ffb20d684cf3db5",
  "1.5c06566be3823ab641ec.js": "18e6ce3a1b034b5467d6dfd3a77468c6",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "a328bb113ef8dc38d8f3651b972214a4",
  "main.5d12953204b136405d82.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.5d12953204b136405d82.js": "742ca09bf2997db4ad3320d35b5aa852",
  "manifest.a958e7bd1a75a46c9cc1.js": "f4c1ce82fd1f31ea7c1bbfeecc59d738",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "1.5c06566be3823ab641ec.css": "294e247516d839373ffb20d684cf3db5",
  "1.5c06566be3823ab641ec.js": "18e6ce3a1b034b5467d6dfd3a77468c6",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "1abb777d08ee323821af7c8c82fa3bc2",
  "main.3d951a173db1d53b305b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.3d951a173db1d53b305b.js": "6dfc3f34c0752c2532561dda0cde42ff",
  "manifest.a958e7bd1a75a46c9cc1.js": "f4c1ce82fd1f31ea7c1bbfeecc59d738",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "1.5c06566be3823ab641ec.css": "294e247516d839373ffb20d684cf3db5",
  "1.5c06566be3823ab641ec.js": "18e6ce3a1b034b5467d6dfd3a77468c6",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "cec4f1499d457f9c58223c80823090cd",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "430ccae4d218d69bda973d6b24306888",
  "main.5d12953204b136405d82.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.5d12953204b136405d82.js": "742ca09bf2997db4ad3320d35b5aa852",
  "manifest.a958e7bd1a75a46c9cc1.js": "f4c1ce82fd1f31ea7c1bbfeecc59d738",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "1.5c06566be3823ab641ec.css": "294e247516d839373ffb20d684cf3db5",
  "1.5c06566be3823ab641ec.js": "18e6ce3a1b034b5467d6dfd3a77468c6",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "15d8b9cb6c0344b1f58e49de5eecbd85",
  "main.3d951a173db1d53b305b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.3d951a173db1d53b305b.js": "6dfc3f34c0752c2532561dda0cde42ff",
  "manifest.a958e7bd1a75a46c9cc1.js": "f4c1ce82fd1f31ea7c1bbfeecc59d738",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "1.5c06566be3823ab641ec.css": "294e247516d839373ffb20d684cf3db5",
  "1.5c06566be3823ab641ec.js": "18e6ce3a1b034b5467d6dfd3a77468c6",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "36165b2fd79fa1dad0a96047c808f8c1",
  "main.3d951a173db1d53b305b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.3d951a173db1d53b305b.js": "6dfc3f34c0752c2532561dda0cde42ff",
  "manifest.a958e7bd1a75a46c9cc1.js": "f4c1ce82fd1f31ea7c1bbfeecc59d738",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "1.5c06566be3823ab641ec.css": "294e247516d839373ffb20d684cf3db5",
  "1.5c06566be3823ab641ec.js": "18e6ce3a1b034b5467d6dfd3a77468c6",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "295cc6d61b8fff57127f52d2c7c87da7",
  "main.5d12953204b136405d82.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.5d12953204b136405d82.js": "742ca09bf2997db4ad3320d35b5aa852",
  "manifest.a958e7bd1a75a46c9cc1.js": "f4c1ce82fd1f31ea7c1bbfeecc59d738",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;
